--- a/style.css
+++ b/style.css
@@ -848,7 +848,7 @@ margin: 0 auto;
 display: flex;
 flex-direction: column;
 background-color: #fff;
-padding: 40px 0;
+padding: 0;
 }
 
 #es-magne-forte.es-magne-forte .es-doze__content {
