--- a/style.css
+++ b/style.css
@@ -412,9 +412,9 @@ margin: 0 20px;
 font-size: 25px;
 font-family: "HelveticaNeueLTProBd", sans-serif;
 line-height: 1;
-background-color: #a2213e;
+background-color: #a2203e;
 text-transform: uppercase;
-min-width: 400px;
+min-width: 340px;
 text-align: center;
 padding: 10px;
 }
@@ -440,7 +440,7 @@ line-height: 1;
 }
 #es-magne-forte.es-magne-forte .es-benefits__singleCtn{
 padding: 10px;
-min-width: 250px;
+max-width: 260px;
 }
 #es-magne-forte.es-magne-forte .es-benefits__singleCtn--leftBorder{
     border-left: 3px solid #324a8b;
@@ -450,8 +450,8 @@ min-width: 250px;
 }
 #es-magne-forte.es-magne-forte .es-benefits__singleCtn--leftBorder::before{
   content: '';
-  width: 360px;
-  height: 2px;
+  width: 300px;
+  height: 3px;
   background-color: #324a8b;
   position: absolute;
   top: 0;
@@ -465,7 +465,7 @@ min-width: 250px;
 }
 #es-magne-forte.es-magne-forte .es-benefits__singleCtn--rightBorder::before{
   content: '';
-  width: 360px;
+  width: 235px;
   height: 3px;
   background-color: #324a8b;
   position: absolute;
@@ -473,10 +473,11 @@ min-width: 250px;
   right: 0;
 }
 #es-magne-forte.es-magne-forte .es-benefits__boldText{
-    color: #a2213e;
+    color: #a2203e;
     margin: 0;
     font-size: 22px;
-    font-family: "HelveticaNeueLTProBd", sans-serif;
+    font-family: "Asap Condensed", sans-serif;
+    font-weight: bold;
 }
 #es-magne-forte.es-magne-forte .es-benefits__text{
     color: #324a8b;
@@ -499,8 +500,13 @@ width: 100%;
 text-align: center;
 text-transform: uppercase;
 font-size: 20px;
-background-color: #a2213e;
+background-color: #a2203e;
 position: relative;
+
+}
+#es-magne-forte.es-magne-forte .es-ingr__title p{
+  margin: 0;
+  padding: 15px;
 }
 #es-magne-forte.es-magne-forte .es-ingr__questionIcon{
   position: absolute;
@@ -519,24 +525,26 @@ background-image: url(./images/bg_questions.png);
 background-repeat: no-repeat;
 background-position: center;
 background-size: cover;
-padding: 50px 20px;
+padding: 30px;
 display: flex;
 flex-direction: column;
 justify-content: center;
 align-items: center;
-margin-bottom: 80px;
+margin-bottom: 60px;
+
 }
 #es-magne-forte.es-magne-forte .es-ingr__mainQuestion{
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     text-align: center;
     font-weight: bold;
     font-size: 20px;
 }
 #es-magne-forte.es-magne-forte .es-ing__mainAnswer{
     text-align: center;
-    line-height: 1.5;
+    line-height: 1;
     padding: 0px 40px;
     font-size: 20px;
+    margin: 0;
 }
 #es-magne-forte.es-magne-forte .es-ingr__content{
     display: flex;
@@ -554,10 +562,10 @@ height: auto;
 }
 
 #es-magne-forte.es-magne-forte .es-ingr__btn {
-background: #a2213e;
+background: #a2203e;
 color: #fff;
 font-weight: bold;
-font-size: 20px;
+font-size: 24px;
 width: 100%;
 padding: 10px;
 cursor: pointer;
@@ -572,7 +580,7 @@ display: flex;
 flex-direction: column;
 display: none;
 opacity: 0;
-border: 3px solid #a2213e;
+border: 3px solid #a2203e;
 padding: 20px;
 
 }
@@ -581,7 +589,8 @@ padding: 20px;
     text-align: left;
     margin: 0;
     margin-bottom: 18px;
-    font-size: 20px;
+    font-size: 16px;
+    letter-spacing: 1.5px;
 }
 
 #es-magne-forte.es-magne-forte .activeBtn {
@@ -618,7 +627,7 @@ transform: rotate(180deg);
 }
 
 #es-magne-forte.es-magne-forte .es-icons__boldText{
-    color: #a2213e;
+    color: #a2203e;
     font-size: 20px;
     letter-spacing: 1.5px;
     font-weight: bold;
@@ -644,7 +653,7 @@ transform: rotate(180deg);
 }
 #es-magne-forte.es-magne-forte .es-symptom__title{
   width: 100%;
-  background-color: #a2213e;
+  background-color: #a2203e;
   color: #fff;
   text-align: center;
   padding: 25px;
@@ -666,9 +675,12 @@ transform: rotate(180deg);
 }
 #es-magne-forte.es-magne-forte .es-symptom__subTitle{
 border: 2px solid #fff;
-margin: 40px;
+margin: 30px;
 padding: 0px 60px;
+width: 80%;
+font-size: 20px;
 }
+
 #es-magne-forte.es-magne-forte .es-symptom__subTitle p{
 text-align: center;
 line-height: 1.5;
@@ -685,9 +697,7 @@ align-items: center;
 #es-magne-forte.es-magne-forte .es-symptom__single:hover{
   filter: brightness(1.5);
 }
-#es-magne-forte.es-magne-forte .es-symptom__leftCtn{
-  
-}
+
 #es-magne-forte.es-magne-forte .es-symptom__rightCtn{
   text-align: right;
   
@@ -759,11 +769,11 @@ margin: 0 auto;
 #es-magne-forte.es-magne-forte .es-cause__title{
   font-family: "Asap Condensed", sans-serif;
     width: 100%;
-    background-color: #a2213e;
+    background-color: #a2203e;
     color: #fff;
     text-align: center;
     padding: 25px;
-    font-size: 20px;
+    font-size: 24px;
     margin: 0;
 }
 #es-magne-forte.es-magne-forte .es-cause__Ctn{
@@ -786,6 +796,8 @@ margin: 0 auto;
     flex-wrap: wrap;
     justify-content: flex-start;
     align-items: flex-start;
+    font-family: "Asap Condensed", sans-serif;
+
 }
 #es-magne-forte.es-magne-forte .es-cause__icon{
     max-width: 120px;
@@ -827,11 +839,11 @@ margin: 0 auto;
 #es-magne-forte.es-magne-forte .es-atRisk__title{
   font-family: "Asap Condensed", sans-serif;
     width: 100%;
-    background-color: #a2213e;
+    background-color: #a2203e;
     color: #fff;
     text-align: center;
     padding: 25px;
-    font-size: 20px;
+    font-size: 24px;
     margin: 0;
 }
 #es-magne-forte.es-magne-forte .es-atRisk__mainCtn{
@@ -845,6 +857,7 @@ display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    letter-spacing: 1.5px;
 }
 #es-magne-forte.es-magne-forte .es-atRisk__dataCtn{
     display: flex;
@@ -864,12 +877,12 @@ display: flex;
 }
 #es-magne-forte.es-magne-forte .es-atRisk__single:hover{
     background-color: #fff;
-    color: #a2213e;
-    border: 2px solid #a2213e;
+    color: #a2203e;
+    border: 2px solid #a2203e;
     transition: .5s ease-in-out;
 }
 #es-magne-forte.es-magne-forte .es-atRisk__single:hover p{
-    color: #a2213e;
+    color: #a2203e;
     transition: .5s ease-in-out;
 }
 #es-magne-forte.es-magne-forte .es-atRisk__percentage{
@@ -902,11 +915,11 @@ margin: 0 auto;
 height: auto;
 }
 #es-magne-forte.es-magne-forte .es-doze__btn {
-background: #a2213e;
+background: #a2203e;
 color: #fff;
 font-family: "Asap Condensed", sans-serif;
 font-weight: bold;
-font-size: 20px;
+font-size: 24px;
 width: 100%;
 padding: 10px;
 cursor: pointer;
@@ -919,7 +932,7 @@ width: 15px;
 display: flex;
 flex-direction: column;
 display: none;
-border: 3px solid #a2213e;
+border: 3px solid #a2203e;
 padding: 20px;
 }
 #es-magne-forte.es-magne-forte .es-doze__single {
@@ -949,12 +962,14 @@ min-width: 210px;
 #es-magne-forte.es-magne-forte .es-doze__text--small{
 font-size: 16px;
 margin: 0;
+letter-spacing: 1.5px;
+font-weight: 200;
 }
 #es-magne-forte.es-magne-forte .es-doze__line{
     width: 80%;
     height: 3px;
     margin: 0 auto;
-    background-color: #a2213e;
+    background-color: #a2203e;
 }
 #es-magne-forte.es-magne-forte .es-doze .activeBtn {
 display: flex;
@@ -978,15 +993,18 @@ background-size: cover;
 #es-magne-forte.es-magne-forte .es-cross_title{
   font-family: "Asap Condensed", sans-serif;
     max-width: 960px;
-min-width: 320px;
+    min-width: 320px;
     width: 100%;
     margin: 0 auto;
-    background-color: #a2213e;
+    background-color: #a2203e;
     text-align: center;
     margin-bottom: 0;
     padding: 3px;
-    font-weight: bold;
-    font-size: 20px;
+    font-size: 24px;
+}
+#es-magne-forte.es-magne-forte .es-cross_title p{
+  margin: 0;
+  padding: 5px;
 }
 #es-magne-forte.es-magne-forte .es-cross_title--second{
     background-color: #00b1ba;
@@ -1032,10 +1050,10 @@ width: 70px;
 #es-magne-forte.es-magne-forte .es-cross__newnessBadge{
   position: absolute;
   top: -60%;
-  right: -35%;
+  right: -15%;
 }
 #es-magne-forte.es-magne-forte .es-cross__badgeText{
-  color: #a2213e;
+  color: #a2203e;
   background-color: #fff;
   padding: 5px 20px;
   font-size: 20px;
@@ -1050,18 +1068,18 @@ margin: 0 auto;
 }
 #es-magne-forte.es-magne-forte .es-cross__name {
 color: #fff;
-font-size: 16px;
-font-weight: normal;
+font-size: 18px;
+font-weight: 200;
 margin: 20px 0;
-font-family: "HelveticaNeueLTProBd", sans-serif;
+font-family: "Asap Condensed", sans-serif;
 }
 
 #es-magne-forte.es-magne-forte .es-cross__link {
 text-decoration: none;
 font-family: "Asap Condensed", sans-serif;
 font-size: 20px;
-font-weight: bold;
-background: #a2213e;
+text-transform: capitalize;
+background: #a2203e;
 padding: 5px 40px;
 border-radius: 50px;
 border: 3px solid #fff;
